turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:17: error: not found: type U
var rule:Array[Array[Array[Int]]] = T[U[V]]
                                      ^Turmite:17: error: method T of type Array[Int] does not take type parameters.
var rule:Array[Array[Array[Int]]] = T[U[V]]
                                     ^Turmite:50: error: not found: value setCouleur
  	setCouleur
        ^